--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/chatapp_mri?useSSL=false&serverTimezone=UTC
+server.port=8080
+server.address=0.0.0.0
+
+spring.datasource.url=jdbc:mysql://localhost:3306/chatapp_mri?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=mysqlmri2024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
